fixed pannel sticking out when closed; must push to test on safari

--- a/app/assets/stylesheets/unembedded.scss
+++ b/app/assets/stylesheets/unembedded.scss
@@ -310,6 +310,14 @@ label .icon-calendar { float: right; margin-top: 2px; }
     &~ .wittyEDFullscreenToggle {
       left: 0;
     }
+
+    .wittyEDEditorMain .theme-editor__header {
+      width: 0;
+    }
+
+    .wittyEDEditorMain .wittyEDPanel .theme-editor__header {
+      width: 0;
+    }
   }
   
   /* Misc Styles */
@@ -551,6 +559,7 @@ label .icon-calendar { float: right; margin-top: 2px; }
   .sidebyside_25 { width: 25%; }
   .sidebyside_75 { width: 75%; }
   .sidebyside_85 { width: calc(85% - 7px); }
+  .sidebyside_85.primary.next-pannel { width: 231px; }
   
   section {
     article { 
@@ -958,7 +967,7 @@ label .icon-calendar { float: right; margin-top: 2px; }
       z-index: 4;
       padding-top: 0;
       width: 300px;
-      min-height: auto;
+      min-height: 0;
       text-align: left;
       -webkit-flex: none;
       -ms-flex: none;
@@ -966,6 +975,7 @@ label .icon-calendar { float: right; margin-top: 2px; }
       background: #ffffff;
       position: fixed;
       box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+      transition: width .3s;
       
       .btn_more {
         position: absolute;
@@ -980,6 +990,8 @@ label .icon-calendar { float: right; margin-top: 2px; }
       position: fixed;
       top: 54px;
       width: 300px;
+      transition: width .3s;
+      white-space: nowrap;
     }
     
     .theme-editor__header-nav {
@@ -998,7 +1010,8 @@ label .icon-calendar { float: right; margin-top: 2px; }
       padding-left: 3px;
     }
     .theme-editor__heading {
-      padding: 15px 40px;
+      padding: 15px 0;
+      width: 280px;
       cursor: default;
       text-align: center;
       white-space: nowrap;
@@ -1053,9 +1066,10 @@ label .icon-calendar { float: right; margin-top: 2px; }
     }
     .wittyEDLogoHeading {
       height: 18px;
-      padding: 20px 40px 16px;
+      padding: 20px 0 16px;
       background: #31373d;
       margin: 0;
+      width: 300px;
       
       .theme-editor__heading { padding: 0; }
       
@@ -1097,7 +1111,7 @@ label .icon-calendar { float: right; margin-top: 2px; }
       -webkit-overflow-scrolling: touch;
 
       .sidebyside_large {width: calc(85% - 9px);}
-      .icon-trash {background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 27 27' enable-background='new 0 0 27 27'%3E%3Cpath fill='rgb(255,255,255)' d='M27.5,5a2.22,2.22,0,0,1-1.8,2.25H2.3A2.22,2.22,0,0,1,.5,5,2.22,2.22,0,0,1,2.3,2.75H9.5C9.5,1.63,11.07.5,12.2,0.5h3.6c1.13,0,2.7,1.35,2.7,2.25h7.2A2.22,2.22,0,0,1,27.5,5Zm-2.25,5.85V25.7c0,0.9-1.8,1.8-2.7,1.8H5.45c-0.9,0-2.7-.68-2.7-1.8V10.85A3.17,3.17,0,0,1,4.33,9.5H23.9A3.88,3.88,0,0,1,25.25,10.85ZM11.75,14.9a1,1,0,0,0-.9-0.9H10.4a1,1,0,0,0-.9.9v7.2a1,1,0,0,0,.9.9h0.45a1,1,0,0,0,.9-0.9V14.9Zm6.75,0a1,1,0,0,0-.9-0.9H17.15a1,1,0,0,0-.9.9v7.2a1,1,0,0,0,.9.9H17.6a1,1,0,0,0,.9-0.9V14.9Z' transform='translate(-0.5 -0.5)' /%3E%3C/svg%3E");}
+      .icon-trash {backgroundmin-height-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 27 27' enable-background='new 0 0 27 27'%3E%3Cpath fill='rgb(255,255,255)' d='M27.5,5a2.22,2.22,0,0,1-1.8,2.25H2.3A2.22,2.22,0,0,1,.5,5,2.22,2.22,0,0,1,2.3,2.75H9.5C9.5,1.63,11.07.5,12.2,0.5h3.6c1.13,0,2.7,1.35,2.7,2.25h7.2A2.22,2.22,0,0,1,27.5,5Zm-2.25,5.85V25.7c0,0.9-1.8,1.8-2.7,1.8H5.45c-0.9,0-2.7-.68-2.7-1.8V10.85A3.17,3.17,0,0,1,4.33,9.5H23.9A3.88,3.88,0,0,1,25.25,10.85ZM11.75,14.9a1,1,0,0,0-.9-0.9H10.4a1,1,0,0,0-.9.9v7.2a1,1,0,0,0,.9.9h0.45a1,1,0,0,0,.9-0.9V14.9Zm6.75,0a1,1,0,0,0-.9-0.9H17.15a1,1,0,0,0-.9.9v7.2a1,1,0,0,0,.9.9H17.6a1,1,0,0,0,.9-0.9V14.9Z' transform='translate(-0.5 -0.5)' /%3E%3C/svg%3E");}
     }
 
     .quick-select .wittyEDPanelBody {
